--- a/escrita.html
+++ b/escrita.html
@@ -3,26 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Escrita</title>
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
-  
-    
+
+    <h2>Escrita</h2>
+
+    </div>
+    <div class="col">
+        <img src="img/languages_1973635.png" alt="">
+        <p>
+            Aprenda o alfabeto e a pronúncia: Comece pelo básico, isso é fundamental para entender como as palavras são formadas.
+            <br>
+            <br>
+            Vocabulário e frases simples: Comece com palavras e frases simples aprenda vocabulário relacionado a situações cotidianas como cumprimentos, números, cores e objetos.s
+            <br>
+            <br>
+            Leituras e escrita regular: Leia textos no idioma alvo, histórias curtas e noticias. <br> Escreva regularmente, mantenha um diário ou escreva pequenos parágrafos.
+            <br>
+            <br>
+            Pratique a escrita criativa: Escreva histórias, poemas ou ensaios no idioma.
+            <br>
+            <br>
+            <br>
+            Existem sites que ajudam a aprender através da escrita
+        </p>
+        <p>
+            <a href="https://surfacelanguages.com" target="_blank"
+            >Surface Languages</a>
+            <br>
+            <a href="https://italki.com" target="_blank"
+            >Italki</a>
+        </p>
 
 
 
 
 
 
-
-
-
-
-
-
-
-<footer id="frase">"Pequenos esforços, repetidos dia a dia, são o segredo para o sucesso. - Robert Collier"</footer>
+<footer id="frase">Não tenha medo de cometer erros, a pratica constante é a chave para melhorar! ❤️</footer>
 <footer id="rodape"><a href="https://github.com/RosaNic">&copy</a>
 Mongaguá, 2024</footer>
 </body>
