--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Hobby</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h2>Idiomas</h2>
     <br>
@@ -43,7 +44,7 @@
                       </li>
                       <li>
                         <a href="sites_uteis.html" target="_blank"
-                          >Sites para aprender🤓☝️</a
+                          >Conteudo extra🤓☝️</a
                         >
                       </li>
                     
