--- a/leitura.html
+++ b/leitura.html
@@ -4,25 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leituras</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
-    <form action="/processar-formulario" method="text">
-        <label for="mensagem">Mensagem:</label>
-        <textarea id="mensagem" name="mensagem" rows="10" required></textarea>
-    </form>
 
+    <h2>Leituras</h2>
 
-
-
-
-
+    <img src="img/unnamed.png" alt="">
     
+    </div>
+    <div class="col">
+        <p>
+            Ler no idioma que você está aprendendo ajuda a mehorar a compreensão de leitura e vocabulário!
+            <br>
+            <br>
+            Comece com textos ou frases simples, como histórias infantis ou artigos de noticias.
+            <br>
+            <br>
+            Existem alguns sites e aplicativos que te ajudam a aprender outras linguas apartir da leitura!
+        </p>
+        <p>
+            <a href="https://busuu.com" target="_blank"
+            >Busuu</a>
+            <br>
+            <a href="https://www.babbel.com/" target="_blank"
+            >Babbel</a>
+            <br>
+            <a href="https://lernu.net" target="_blank"
+            >Lernu</a>
+        </p>
+    <div>
 
-
-
-<footer id="frase">"Pequenos esforços, repetidos dia a dia, são o segredo para o sucesso. - Robert Collier"</footer>
+<footer id="frase">Não tenha medo de cometer erros, a pratica constante é a chave para melhorar! ❤️</footer>
 <footer id="rodape"><a href="https://github.com/RosaNic">&copy</a>
 Mongaguá, 2024</footer>
+
 </body>
 </html>
