--- a/pronuncia.html
+++ b/pronuncia.html
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Pronuncia</title>
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
+
+    <h2>Pronuncia</h2>
+
+    <img src="img/7819035.png" alt="">
     
+    <p>
+        Fale mais devagar: Permita-se falar de forma mais pausada no novo idioma, isso dará tempo de formular frases com menos tropeços nos sons.
+        <br>
+        <br>
+        Leia em voz alta: Ler em voz alta: Ler em voz alta ajuda você se acostumar com a produção dos sons e palavras do idioma.
+        <br>
+        <br>
+        Foque em sons essenciais: Alguns sons são mais importantes para a compreensão do que os outros.
+        <br>
+        <br>
+        Ouça mais: Pratique sua escuta ativa para treinar seu ouvido, e indiretamente sua fala, ouça o idioma sendo usado naturalmente em podcast, músicas, séries e vídeos.
+        <br>
+        <br>
+        Alguns sites e aplicativos úteis para melhorar sua pronuncia
+    </p>
+    <p>
+        <a href="https://blog.duolingo.com" target="_blank"
+        >Duolingo Blog</a>
+        <br>
+        <a href="https://easypronunciation.com" target="_blank"
+        >Easy Pronunciation</a>
+        <br>
+        <a href="https://memrise.com" target="_blank"
+        >Memrise</a>
+    </p>
 
 
 
@@ -21,9 +50,7 @@
 
 
 
-
-
-<footer id="frase">"Pequenos esforços, repetidos dia a dia, são o segredo para o sucesso. - Robert Collier"</footer>
+<footer id="frase">Não tenha medo de cometer erros, a pratica constante é a chave para melhorar! ❤️</footer>
 <footer id="rodape"><a href="https://github.com/RosaNic">&copy</a>
 Mongaguá, 2024</footer>
 </body>
