--- a/organizacao.html
+++ b/organizacao.html
@@ -3,28 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Como se organizar</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Organização</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <div class="container text-left">
-        <div class="row align-items-top">
+
+    <h2>Como se organizar</h2>
+
+    <div class="container text-right">
+    <div class="row align-items-top">
         <div class="col">
             <form action="mensagem" method="text">
                 <label for="mensagem text-left">Anotações:</label>
                 <textarea id="mensagem" name="mensagem" rows="10" required></textarea>
             </form>
-        </div>
+    </div>
+    <div class="col">
+        <p>
+            Crie um Horário Fixo:
+            Defina um horário específico para estudar todos os dias.
+            Mantenha a consistência para formar um hábito.
+            <br>
+            <br>
+            Estabeleça Metas Claras:
+            Defina metas diárias ou semanais para o que deseja aprender. Isso ajuda a manter o foco e a motivação.
+            <br>
+            <br>
+            Use Técnicas de Pomodoro:
+            Estude por 25 minutos e faça uma pausa de 5 minutos.
+            Repita esse ciclo para manter a concentração.
+            <br>
+            <br>
+            Faça Revisões Regulares:
+            Revise o material estudado regularmente para fixar o conhecimento.
+            <br>
+        </p>
+    <p>
+        <br>
+        Existem alguns aplicativos para organização:
+        <br>
+        <br>
+        <a href="https://trello.com/home" target="_blank"
+        >Trello</a>
+        <br>
+        <a href="https://asana.com/pt?noredirect=" target="_blank"
+        >Asana</a>
+        <br>
+        <a href="https://workspace.google.com/products/calendar/?hl=pt-BR" target="_blank"
+        >Google Agenda</a>
+    </p>
 
 
 
-
-
-
-
-
-<footer id="frase">"Pequenos esforços, repetidos dia a dia, são o segredo para o sucesso. - Robert Collier"</footer>
-<footer id="rodape"><a href="https://github.com/RosaNic">&copy</a>
-Mongaguá, 2024</footer>
+    <footer id="frase">Não tenha medo de cometer erros, a pratica constante é a chave para melhorar! ❤️</footer>
+    <footer id="rodape"><a href="https://github.com/RosaNic">&copy</a>
+    Mongaguá, 2024</footer>
 </body>
 </html>
