--- a/sites_uteis.html
+++ b/sites_uteis.html
@@ -3,26 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Conteudo extra</title>
+    <link rel="stylesheet" href="style3.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
+    <h2>Extra</h2>
+
+    <div class></div>
+    <div class="container text-right">
+        <div class="row align-items-top">
+        <div class="col">
+            <img src="img/translator_4439786.png" alt="">
+        </div>
+
+    <p>Aqui esta mais formas de você aprender um novo idioma por conta própria e de forma divertida!</p>
+            <p>
+            <a href="https://surfacelanguages.com" target="_blank"
+            >Surface Languages</a>
+            <br>
+            <a href="https://italki.com" target="_blank"
+            >Italki</a>
+            <br>
+            <a href="https://blog.duolingo.com" target="_blank"
+            >Duolingo Blog</a>
+            <br>
+            <a href="https://easypronunciation.com" target="_blank"
+            >Easy Pronunciation</a>
+            <br>
+            <a href="https://memrise.com" target="_blank"
+            >Memrise</a>
+            <br>
+            <a href="https://busuu.com" target="_blank"
+            >Busuu</a>
+            <br>
+            <a href="https://www.babbel.com/" target="_blank"
+            >Babbel</a>
+            <br>
+            <a href="https://lernu.net" target="_blank"
+            >Lernu</a>
+                </p>
+        <p>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-<footer id="frase">"Pequenos esforços, repetidos dia a dia, são o segredo para o sucesso. - Robert Collier"</footer>
+<footer id="frase">Não tenha medo de cometer erros, a pratica constante é a chave para melhorar! ❤️</footer>
 <footer id="rodape"><a href="https://github.com/RosaNic">&copy</a>
 Mongaguá, 2024</footer>
 </body>
