--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                       </li>
                       <li>
                         <a href="sites_uteis.html" target="_blank"
-                          >Conteudo extra🤓☝️</a
+                          >Sites🤓☝️</a
                         >
                       </li>
                     
