--- a/sites_uteis.html
+++ b/sites_uteis.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <h2>Extra</h2>
+    <h2>Sites</h2>
 
     <div class></div>
     <div class="container text-right">
@@ -21,7 +21,7 @@
             <img src="img/translator_4439786.png" alt="">
         </div>
 
-    <p>Aqui esta mais formas de você aprender um novo idioma por conta própria e de forma divertida!</p>
+    <p>Aqui esta os sites usados para você aprender um novo idioma por conta própria e de forma divertida!</p>
             <p>
             <a href="https://surfacelanguages.com" target="_blank"
             >Surface Languages</a>
